[gd_scene load_steps=6 format=3 uid="uid://b4ivhdmjo3l1r"]

[ext_resource type="Texture2D" uid="uid://blx10vj8puc54" path="res://assets/UI/tank_menu.png" id="1_3u4xe"]
[ext_resource type="Script" path="res://Scenes/UI/menu.gd" id="1_m6jbw"]
[ext_resource type="StyleBox" uid="uid://ccy5itrfe006x" path="res://Scenes/UI/panel.tres" id="2_t6hfb"]
[ext_resource type="FontFile" uid="uid://dlqiino7nti1b" path="res://assets/font/Rockboxcond12.ttf" id="3_mxa3e"]

[sub_resource type="LabelSettings" id="LabelSettings_yu0te"]
font = ExtResource("3_mxa3e")
font_size = 100
font_color = Color(0.937255, 0.278431, 0.282353, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 7
shadow_color = Color(0, 0, 0, 0.6)
shadow_offset = Vector2(2, 2)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6jbw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3u4xe")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "Battle Tanks"
label_settings = SubResource("LabelSettings_yu0te")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("2_t6hfb")

[node name="StartButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.972549, 0.282353, 0.282353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mxa3e")
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="PanelContainer2" type="PanelContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("2_t6hfb")

[node name="QuitButton" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.972549, 0.282353, 0.282353, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mxa3e")
theme_override_font_sizes/font_size = 30
text = "Quit Game"
